--- a/htmlfile.html
+++ b/htmlfile.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     /* General Styles */
+<style>
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
@@ -173,6 +174,7 @@ p {
         font-size: 1rem;
     }
 }
+</style>
 
     <!-- Header Section -->
     <header class="header">
